# ros2_core

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  VERSION
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-29-minimal-cpp-ros2.md
docs/superpowers/specs/: 2026-04-29-minimal-cpp-ros2-design.md
repos/: humble.repos  jazzy.repos
scripts/: build.sh  docker_build.sh  update_src.sh
src/humble/ament/ament_package/: CHANGELOG.rst  package.xml  setup.py
src/humble/osrf/osrf_pycommon/: CHANGELOG.rst  setup.py
src/humble/ros-tooling/libstatistics_collector/: CHANGELOG.rst
src/humble/ros2/common_interfaces/: README.md
src/humble/ros2/rcpputils/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
src/humble/ros2/rcutils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/humble/ros2/tinyxml2_vendor/: package.xml
src/jazzy/ament/ament_package/: CHANGELOG.rst  package.xml  setup.py
src/jazzy/eProsima/foonathan_memory_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/jazzy/osrf/osrf_pycommon/: package.xml
src/jazzy/ros-perception/image_common/camera_info_manager_py/: CHANGELOG.rst  conf.py  package.xml  setup.py
src/jazzy/ros-perception/image_common/camera_info_manager_py/camera_info_manager/: camera_info_manager.py  zoom_camera_info_manager.py
src/jazzy/ros-tooling/libstatistics_collector/: CHANGELOG.rst  package.xml
src/jazzy/ros2-rust/rosidl_rust/: README.md
src/jazzy/ros2/common_interfaces/: README.md
src/jazzy/ros2/rcpputils/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+781 files in other folders)
